<resources>
    <string name="app_name">Cloud Diet App</string>

    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="active">Physical activity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="show_password">Show password</string>
    <string name="save">Save</string>

    <string-array name="spinnerActivity">
        <item>I am Sedentary: No sport or exercise</item>
        <item>I am lightly active (light exercise or sports: 1 or 3 days per week)</item>
        <item>I am moderately active (moderate exercise or sports: 3 or 5 days per week)</item>
        <item>I am very active (hard exercise or sports or physical job: 6 or 7 days per week)</item>
        <item>I am super active (very hard exercise or sports and physical job or 2x training)</item>
    </string-array>

    <string name="enter_location">Enter location</string>
    <string name="reset">Enter username to reset password</string>
    <string name="rest">Reset password</string>
    <string name="conf">Confirm</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="delete">Delete account</string>
    <string name="register_link">Register</string>
    <string name="forgot">Forgot your password?</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Enter verification code</string>
    <string name="conf_code">Enter confirmation code</string>
    <string name="pass">Enter new password</string>
    <string name="confirm_delete">Are you sure that you want to delete your account?</string>
    <string name="del">Yes, I want to delete my account.</string>
    <string name="dele">Delete</string>
    <string name="progress">Your data is being deleted…</string>

    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search">Search</string>
    <string name="nearby_supermarkets">Nearby supermarkets</string>
    <string name="other">Other</string>
    <string name="preferences">Preferences</string>
    <string name="your_bmr_is">Your BMR is</string>
    <string name="user_data">User data</string>
    <string name="max_distance_to_the_supermarket">Max distance to the supermarket</string>
    <string name="done">Done</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_type">Recipe type</string>
    <string name="menu_recipes">Recipes</string>
    <string name="re_generate_recommendations">Regenerate recommendations</string>
    <string name="dish_description">Dish description</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="recipe_image">Recipe image</string>
    <string name="delete_photos">Delete photos</string>
</resources>
